--- a/transasdocorpo-ciar/css/_responsivo.scss
+++ b/transasdocorpo-ciar/css/_responsivo.scss
@@ -20,19 +20,31 @@
 }
 
 @media (max-width: 768px) {
+	.area-noticias [class*=post-] {
+		@include flex-basis(calc(50% - 10px));
 
+		&:nth-of-type(1) {@include flex-basis(100%);}
+	}
 }
 
 
 @media (max-width: 640px) {
-	.topo-site {padding-bottom: 65%;}
+	body.home .topo-site {padding-bottom: 65%;}
+
+	.area-noticias [class*=post-] {
+		@include flex-basis(100%);
+	}
+
+	.area-chamadas .area-chamadas-interna > div {@include flex-basis(50%);}
 }
 
 
 @media (max-width: 480px) {
+
+	.area-chamadas .area-chamadas-interna > div {@include flex-basis(100%);}
 	
 }
 
 @media (max-width: 370px) {
-	.topo-site {padding-bottom: 75%;}
+	body.home .topo-site {padding-bottom: 75%;}
 }
