--- a/transasdocorpo-ciar/style.css
+++ b/transasdocorpo-ciar/style.css
@@ -1,4 +1,6 @@
-/*Theme Name: Transas do Corpo 2
+/*Theme Name: Transas do Corpo
 Version: 1.1
 Author: CIAR - UFG
-Author URI: https://www.ciar.ufg.br/*/
+Author URI: https://www.ciar.ufg.br/
+Text Domain: ciar-transasdocorpo
+*/
