--- a/transasdocorpo-ciar/css/style.css
+++ b/transasdocorpo-ciar/css/style.css
@@ -193,10 +193,10 @@ a.btn {
 input, select, textarea, body {
   font-family: 'Open Sans',sans-serif; }
 
-.area-topo .menu-busca, .area-topo .menu-busca nav span, .area-topo .menu-busca nav > ul > li, .area-topo .marca h2, .area-noticias [class*=post-] header time {
+.area-topo .menu-busca, .area-topo .menu-busca nav span, .area-topo .menu-busca nav > ul > li, .area-topo .marca h2, .area-conteudo [class*=post-] header time {
   font-family: 'Nunito',sans-serif; }
 
-.busca form:after, .area-topo .menu-busca nav span:before, .area-noticias [class*=post-] header .tag:before {
+.busca form:after, .area-topo .menu-busca nav span:before, .area-conteudo [class*=post-] header .tag:before {
   font-family: 'FontAwesome'; }
 
 .container {
@@ -204,10 +204,10 @@ input, select, textarea, body {
   padding: 0 10px;
   display: block; }
 
-.busca form:after, a.btn-block span:before, a.btn-block span:after, .topo-site .mascara, .topo-site:after, body.home .topo-site .imagem-fundo, body.home .topo-site .imagem-fundo:after, .area-topo .menu-busca nav ul ul:after, .area-noticias [class*=post-] footer, .area-chamadas .mascara, .area-chamadas:before, .area-chamadas:after, .area-chamadas .imagem-fundo, .area-chamadas .imagem-fundo:after {
+.busca form:after, a.btn-block span:before, a.btn-block span:after, .topo-site .mascara, .topo-site:after, body.home .topo-site .imagem-fundo, body.home .topo-site .imagem-fundo:after, .area-topo .menu-busca nav ul ul:after, .area-conteudo [class*=post-] footer, .area-chamadas .mascara, .area-chamadas:before, .area-chamadas:after, .area-chamadas .imagem-fundo, .area-chamadas .imagem-fundo:after, .rodape .mascara, .rodape:before, .rodape .area-rodape .grafismo {
   position: absolute; }
 
-.busca form, a.btn-block span, .container, .topo-site, .area-topo .menu-busca nav > ul, .area-topo .menu-busca nav > ul > li, .area-topo .menu-busca nav ul ul, .area-noticias [class*=post-], .area-noticias [class*=post-] header .tag, .area-chamadas {
+.busca form, a.btn-block span, .container, .topo-site, .area-topo .menu-busca nav > ul, .area-topo .menu-busca nav > ul > li, .area-topo .menu-busca nav ul ul, .area-conteudo [class*=post-], .area-conteudo [class*=post-] header .tag, .area-chamadas, .rodape, .rodape .area-rodape {
   position: relative; }
 
 a:link, a:visited, a:active, a:focus, a.btn-block span, .area-topo .menu-busca nav > ul, .area-topo .menu-busca nav > ul > li {
@@ -215,7 +215,7 @@ a:link, a:visited, a:active, a:focus, a.btn-block span, .area-topo .menu-busca n
   -moz-transition: all 0.32s ease-in-out;
   transition: all 0.32s ease-in-out; }
 
-.area-topo .menu-busca, .area-topo .menu-busca nav span, .area-topo .menu-busca nav > ul > li a, .area-topo .menu-busca nav ul ul li a, .area-topo .marca h2, .area-noticias [class*=post-] header time, .area-noticias [class*=post-] footer {
+.area-topo .menu-busca, .area-topo .menu-busca nav span, .area-topo .menu-busca nav > ul > li a, .area-topo .menu-busca nav ul ul li a, .area-topo .marca h2, .area-conteudo [class*=post-] header time, .area-conteudo [class*=post-] footer, .rodape .area-rodape .copyright {
   text-transform: uppercase; }
 
 div.galeria {
@@ -526,8 +526,7 @@ body {
   background: #FFF;
   font-size: 16px;
   line-height: 1.6;
-  color: #666;
-  min-height: 300vh; }
+  color: #666; }
 
 .topo-site {
   width: 100%;
@@ -744,7 +743,7 @@ body {
       .area-topo .marca.branca svg path, .area-topo .marca.branca svg g path {
         fill: #FFF; }
 
-.area-noticias {
+.area-conteudo {
   width: 100%;
   float: left;
   clear: both;
@@ -782,52 +781,66 @@ body {
   -o-justify-content: space-between;
   justify-content: space-between;
   -ms-flex-pack: justify; }
-  .area-noticias [class*=post-] {
+  .area-conteudo [class*=post-] {
     margin: 0 0 30px;
     padding-bottom: 35px;
     -webkit-flex-basis: calc(33.333% - 10px);
     -moz-flex-basis: calc(33.333% - 10px);
     flex-basis: calc(33.333% - 10px);
     -ms-flex-preferred-size: calc(33.333% - 10px); }
-    .area-noticias [class*=post-] a {
+    .area-conteudo [class*=post-] a {
       color: inherit; }
-    .area-noticias [class*=post-] header {
+    .area-conteudo [class*=post-] header {
       width: 100%;
       display: block; }
-      .area-noticias [class*=post-] header .tag {
+      .area-conteudo [class*=post-] header .tag {
         display: block;
         font-size: 0.9em;
         font-weight: 600; }
-        .area-noticias [class*=post-] header .tag:before {
+        .area-conteudo [class*=post-] header .tag:before {
           content: "\f068";
           margin-right: 10px;
           vertical-align: middle;
           font-size: 25px;
           line-height: 0; }
-      .area-noticias [class*=post-] header h3 {
+      .area-conteudo [class*=post-] header h3 {
         font-size: 1em;
         line-height: 1.5em;
         font-weight: 600; }
-      .area-noticias [class*=post-] header time {
+      .area-conteudo [class*=post-] header time {
         font-size: 10px;
         opacity: 0.8;
         font-weight: bold;
         letter-spacing: 0.05em; }
-    .area-noticias [class*=post-] article {
+    .area-conteudo [class*=post-] article {
       font-size: 0.85em;
       margin: 15px 0 0 0; }
-    .area-noticias [class*=post-] footer {
+    .area-conteudo [class*=post-] footer {
       bottom: 0;
       left: 0;
       font-size: 12px;
       line-height: 1.5em;
       font-weight: bold; }
-      .area-noticias [class*=post-] footer a {
+      .area-conteudo [class*=post-] footer a {
         color: #b02374; }
-    .area-noticias [class*=post-].type-noticias .tag:before {
+    .area-conteudo [class*=post-].type-noticias .tag:before {
       color: #70164A; }
-    .area-noticias [class*=post-].type-eventos .tag:before {
+    .area-conteudo [class*=post-].type-eventos .tag:before {
       color: #EBAF4F; }
+    .area-conteudo [class*=post-].type-publicacoes .tag:before {
+      color: #748c64; }
+    .area-conteudo [class*=post-].type-informativos .tag:before {
+      color: #586893; }
+    .area-conteudo [class*=post-].type-artigos .tag:before {
+      color: #579191; }
+    .area-conteudo [class*=post-].type-biblioteca .tag:before {
+      color: #916a57; }
+    .area-conteudo [class*=post-].type-acoes .tag:before {
+      color: #9e4949; }
+    .area-conteudo [class*=post-].type-pesquisas .tag:before {
+      color: #8E6389; }
+    .area-conteudo [class*=post-].type-ocupa-madalena .tag:before {
+      color: #8E4D5A; }
 
 .area-chamadas {
   width: 100%;
@@ -931,6 +944,192 @@ body {
       .area-chamadas .area-chamadas-interna > div a.btn {
         color: #FFF; }
 
+.rodape {
+  width: 100%;
+  float: left;
+  clear: both;
+  color: #FFF;
+  background: #000;
+  overflow: hidden; }
+  .rodape .mascara {
+    width: 100%;
+    height: 100%;
+    background: -webkit-linear-gradient(#000, #9e1f61) left repeat;
+    background: linear-gradient(#000, #9e1f61) left repeat;
+    opacity: 0.5;
+    z-index: 1; }
+  .rodape:before {
+    content: "";
+    top: -1px;
+    left: -1px;
+    z-index: 3;
+    width: calc(100% + 2px);
+    height: 0;
+    padding-bottom: 3.16%;
+    background: url("../img/borda2.png") no-repeat center/contain; }
+  .rodape .area-rodape {
+    z-index: 2;
+    padding: 50px 10px 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: norow;
+    -moz-box-orient: norow;
+    box-orient: norow;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    box-direction: normal;
+    -webkit-flex-direction: norow;
+    -moz-flex-direction: norow;
+    flex-direction: norow;
+    -ms-flex-direction: norow;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify; }
+    .rodape .area-rodape a {
+      color: #FFF; }
+    .rodape .area-rodape .grafismo {
+      -webkit-flex-basis: 100%;
+      -moz-flex-basis: 100%;
+      flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+      left: 0;
+      bottom: 0;
+      -webkit-transform: translate(10%, 40%);
+      -moz-transform: translate(10%, 40%);
+      -ms-transform: translate(10%, 40%);
+      -o-transform: translate(10%, 40%);
+      transform: translate(10%, 40%);
+      opacity: 0.08; }
+    .rodape .area-rodape .navegacao {
+      -webkit-flex-basis: calc(100% - 340px);
+      -moz-flex-basis: calc(100% - 340px);
+      flex-basis: calc(100% - 340px);
+      -ms-flex-preferred-size: calc(100% - 340px); }
+      .rodape .area-rodape .navegacao > ul {
+        width: 100%;
+        display: -webkit-box;
+        display: -moz-box;
+        display: box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: norow;
+        -moz-box-orient: norow;
+        box-orient: norow;
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        box-direction: normal;
+        -webkit-flex-direction: norow;
+        -moz-flex-direction: norow;
+        flex-direction: norow;
+        -ms-flex-direction: norow;
+        -webkit-box-lines: multiple;
+        -moz-box-lines: multiple;
+        box-lines: multiple;
+        -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+        -moz-box-pack: justify;
+        box-pack: justify;
+        -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+        -ms-justify-content: space-between;
+        -o-justify-content: space-between;
+        justify-content: space-between;
+        -ms-flex-pack: justify; }
+        .rodape .area-rodape .navegacao > ul > li {
+          display: inline-block;
+          vertical-align: top;
+          margin: 0 0 25px;
+          padding: 0 20px 0 0;
+          font-size: 0.9em;
+          font-weight: 600; }
+          .rodape .area-rodape .navegacao > ul > li:first-of-type {
+            display: none; }
+          .rodape .area-rodape .navegacao > ul > li ul {
+            margin-top: 10px; }
+            .rodape .area-rodape .navegacao > ul > li ul li {
+              font-size: 0.85em;
+              font-weight: normal; }
+    .rodape .area-rodape .marca {
+      -webkit-flex-basis: 300px;
+      -moz-flex-basis: 300px;
+      flex-basis: 300px;
+      -ms-flex-preferred-size: 300px;
+      margin: 0 0 25px; }
+      .rodape .area-rodape .marca svg {
+        width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
+        text-align: center;
+        display: block;
+        -webkit-filter: drop-shadow(1px 1px 1px #000);
+        filter: drop-shadow(1px 1px 1px #000); }
+        .rodape .area-rodape .marca svg path, .rodape .area-rodape .marca svg g path {
+          fill: #EBAF4F; }
+    .rodape .area-rodape .copyright {
+      margin: 35px 0 20px;
+      -webkit-flex-basis: 100%;
+      -moz-flex-basis: 100%;
+      flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: norow;
+      -moz-box-orient: norow;
+      box-orient: norow;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      box-direction: normal;
+      -webkit-flex-direction: norow;
+      -moz-flex-direction: norow;
+      flex-direction: norow;
+      -ms-flex-direction: norow;
+      -webkit-box-lines: multiple;
+      -moz-box-lines: multiple;
+      box-lines: multiple;
+      -webkit-flex-wrap: wrap;
+      -moz-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      box-pack: justify;
+      -webkit-justify-content: space-between;
+      -moz-justify-content: space-between;
+      -ms-justify-content: space-between;
+      -o-justify-content: space-between;
+      justify-content: space-between;
+      -ms-flex-pack: justify;
+      font-size: 9px;
+      letter-spacing: 0.06em; }
+
 @media (min-width: 1101px) {
   .container {
     width: 1100px; } }
@@ -941,23 +1140,68 @@ body {
   .area-topo .menu-busca nav span {
     display: block; }
   .area-topo .menu-busca nav ul {
-    display: none; } }
+    display: none; }
+
+  .rodape .area-rodape .navegacao, .rodape .area-rodape .marca {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%; }
+  .rodape .area-rodape .marca {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    box-ordinal-group: 2;
+    -webkit-order: 2;
+    -moz-order: 2;
+    order: 2;
+    -ms-flex-order: 2; }
+  .rodape .area-rodape .navegacao {
+    -webkit-box-ordinal-group: 3;
+    -moz-box-ordinal-group: 3;
+    box-ordinal-group: 3;
+    -webkit-order: 3;
+    -moz-order: 3;
+    order: 3;
+    -ms-flex-order: 3; }
+  .rodape .area-rodape .copyright {
+    -webkit-box-ordinal-group: 4;
+    -moz-box-ordinal-group: 4;
+    box-ordinal-group: 4;
+    -webkit-order: 4;
+    -moz-order: 4;
+    order: 4;
+    -ms-flex-order: 4; } }
 @media (max-width: 768px) {
-  .area-noticias [class*=post-] {
+  .area-conteudo [class*=post-] {
     -webkit-flex-basis: calc(50% - 10px);
     -moz-flex-basis: calc(50% - 10px);
     flex-basis: calc(50% - 10px);
     -ms-flex-preferred-size: calc(50% - 10px); }
-    .area-noticias [class*=post-]:nth-of-type(1) {
+    .area-conteudo [class*=post-]:nth-of-type(1) {
       -webkit-flex-basis: 100%;
       -moz-flex-basis: 100%;
       flex-basis: 100%;
-      -ms-flex-preferred-size: 100%; } }
+      -ms-flex-preferred-size: 100%; }
+
+  .rodape .area-rodape .navegacao > ul {
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -o-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center; }
+    .rodape .area-rodape .navegacao > ul li {
+      padding: 0 8px; }
+      .rodape .area-rodape .navegacao > ul li ul {
+        display: none; } }
 @media (max-width: 640px) {
   body.home .topo-site {
     padding-bottom: 65%; }
 
-  .area-noticias [class*=post-] {
+  .area-conteudo [class*=post-] {
     -webkit-flex-basis: 100%;
     -moz-flex-basis: 100%;
     flex-basis: 100%;
@@ -973,7 +1217,10 @@ body {
     -webkit-flex-basis: 100%;
     -moz-flex-basis: 100%;
     flex-basis: 100%;
-    -ms-flex-preferred-size: 100%; } }
+    -ms-flex-preferred-size: 100%; }
+
+  .rodape .area-rodape .navegacao {
+    display: none; } }
 @media (max-width: 370px) {
   body.home .topo-site {
     padding-bottom: 75%; } }
